# Robot_Perception

Final_exam/: slam.py
HW1/Automatic Image Analysis and Camera Calibration/: Q2.ipynb
HW1/Implementation of Augmented Reality Cube Visualization with ArucoMarker/: IMG_7744.HEIC
HW1/Q1/: Q1.py
HW1/Q3/: Q3.ipynb
HW1/Q3/.ipynb_checkpoints/: Q3-checkpoint.ipynb
HW1/Q4/: Q4.ipynb
HW2/F_matrix_using_Stereo_images/: task3.ipynb
HW2/ICP/: task2_a.ipynb  task2_b.ipynb
HW2/Task1/: task1.py
HW2/Task4/: task4.ipynb
HW2/Task5/: task5.ipynb
Project/v_slam/: CMakeLists.txt  LICENSE.md  db_read.py  db_viewer.py  how_to_use.txt  install_dependencies.txt  v_slam_intall.txt
Project/v_slam/config/: oneplus-8t.yaml  realsense-d455.yaml
Project/v_slam/example/: CMakeLists.txt  cam_slam.cc
